--- a/src/client/style.css
+++ b/src/client/style.css
@@ -12,3 +12,18 @@
 .hide {
     display: none;
 }
+
+/* Pro tips: 
+
+- Term area should be the same size as the term area wrapper
+- The modal thingy should be the same size as the term area wrapper
+- The default color of everything should be dark mode you know the color 
+- I really dont know the rest
+- The class result-info is a wrapper class that should be a flex box space around
+- Result-info-item should be slightly darker than the normal background color and should have rounded corners. Width = 25%
+- Answer-result-image width: width: 90% of parent, height: auto
+- Term-area-wrapper should have no padding
+- HEK NOTHING SHOULD HAVE PADDING OR MARGIN
+- Everything inside term-area-wrapper should have a width and height of 100%
+- answer-result-modal should have a background of normal you know etc
+*/
